--- a/app/src/main/res/layout/fragment_random_quote.xml
+++ b/app/src/main/res/layout/fragment_random_quote.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.quote.RandomQuoteFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,28 +9,66 @@
     android:id="@+id/viewContainer"
     android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvQuote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Quote"
-            android:textSize="22sp"
-            android:layout_gravity="center"/>
-
-        <TextView
-            android:id="@+id/tvAuthor"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Author"
-            android:textSize="22sp"
-            android:layout_gravity="bottom"
-            android:gravity="center"/>
+            app:cardUseCompatPadding="true"
+            app:cardElevation="16dp"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/app_name"
+                            android:paddingHorizontal="8dp"
+                            android:textSize="11sp"
+                            android:background="@color/dark_blue"
+                            android:textColor="@color/white"/>
+
+                        <TextView
+                            android:id="@+id/tvQuote"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            tools:text="Quote"
+                            android:textSize="20sp"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="8dp"
+                            android:textStyle="italic"
+                            android:textAlignment="center"
+                            android:paddingHorizontal="10dp"/>
+
+                        <TextView
+                            android:id="@+id/tvAuthor"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            tools:text="Author"
+                            android:textSize="16sp"
+                            android:textAlignment="center"
+                            android:layout_marginVertical="8dp"/>
+
+                </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
 
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
